package thuchanh.stratery.cc1;

public interface ITinh {
  float tinh(float a, float b);
}
