package thuchanh.stratery.cc1;

public class Tru implements ITinh {
  @Override
  public float tinh(float a, float b) {
    return a-b;
  }
}
